# hooktipper

./: .pre-commit-hooks.yaml  README.md  exec.sh  pyproject.toml
hooktipper/: exec.sh  main.py
